--- a/index.html
+++ b/index.html
@@ -2,3 +2,16 @@
 k
 ザリガニ
 oka
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1>こんにちは
+    k
+    ザリガニ
+    oka
+  </body>
+</html>
