--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@ oka
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+      img{width:200px;}
+      
+    </style>
   </head>
   <body>
     <h1>こんにちは
     k
     ザリガニ
     oka
+    <img src="OIP.jpg" alt="">
   </body>
 </html>
