--- a/cookie.html
+++ b/cookie.html
@@ -9,7 +9,7 @@
     <title></title>
     <style media="screen">
       body{background-image: url("monhan.jpg");}
-      img{width:400px;}
+      img{width:100px;}
       img{transition: transform.3s ease}
       .container{display:flex;}
       .item{flex-grow:2;}
@@ -25,7 +25,20 @@
     }else{
       cookie_count=0;
     }
-    setInterval(save_action);
+    setInterval(save_action,1000);
+    function save_action(){
+      localStorage.setItem("Is_count",cookie_count);
+    }
+
+    su_event_id=setInterval(screen_update,100);
+    function screen_update(){
+      var count_text=document.getElementById('cookie_count')
+      count_text.textContent=cookie_count;
+    }
+
+    function event_clear(){
+      clearInterval(su_event_id);
+    }
 
       function cookieclick(num){
       var count_text=document.getElementById('cookie_img');
@@ -40,30 +53,29 @@
 
       function cursor(){
         setInterval(cookieclick,1000,1);
-        setInterval("cookclick()",1000);
+        setInterval("cookieclick()",1000);
       }
 
       function grandma(){
         setInterval(cookieclick,1000,4);
-        setInterval(cookieclick,1000);
+        setInterval("cookieclick()",1000);
       }
 
     </script>
     <div class="container">
     <div class="item1">
+      <button id="screen_switch" onclick="event_clear()" type="button" name="button">更新切り替え</button>
       <p>
       <span id="cookie_count"></span>cookies
     </p>
-  <img onclick="cookieclick(1)" src="cookie,jpg.jpg"alt="">
+  <img id="cookie.jpg.jpg"onclick="cookieclick(1)" src="cookie,jpg.jpg"alt="">
 </div>
-
-<div class="item2">
-  <p class="animate__animated animate__bounce">
-  製作途中
-</div>
-<div class="item3">
-  <ul>
-    <li　onclick="cursor()">カーソル</li>
+<div class="Item2">
+  <p class="animate__animated animate_bounce">製作途中
+  </div>
+  <div class="Item3">
+    <ul>
+      <li onclick="cursor()">カーソル</li>
     <li　onclick="grandma()">グランマ</li>
     <li>農場</li>
     <li>鉱山</li>
