--- a/cookie.html
+++ b/cookie.html
@@ -40,28 +40,49 @@
     }
 
     class Building{
-      constructor(time,num){
+      constructor(time,num,cost){
         this.event_ids=[];
         this.interval_time=time;
         this.add_num=num;
-      }
+        this.cost=cost;
+
+        buy(){
+          if(cookie_count>this.cost){
+            cookie_count-=this.cost;
+            let self =this;
+            let return_id=setInterval(function(){
+            },1000);
+            this.setInterval_ids.push(return_id);
+          }
+        }
+
+        sell(){
+          let return_id=this.event_ids.pop();
+          clearInterval(return_id);
+        }
+
       count_up(num){
         count+=num
       }
       buy(){
+        if(cookie_count>this.cost){
+          cookie_count-=this.cost;
         let self=this;
         let return_id=setInterval(function(){
           self.count_up(self.add_num);
-        },1000);
+        },this.interval_time);
         this.event_ids.push(return_id);
       }
     }
+
     let curser=new Building(10000,1);
     let grandma=new Building(1000,1);
     let farm=new Building(1000,8);
     let mine=new Building(1000,20);
     cursor.buy();
     curser.sell();
+
+
 
     setInterval(save_action,1000);
     function save_action(){
@@ -88,14 +109,6 @@
       cookie_count= cookie_count + num;
       count_text.textContent = cookie_count;
     }
-
-      function cursor(){
-      if(cookie_count>=10){
-        cookie_count-=10;
-
-        let r_id=setInterval(cookieclick,1000,1);
-        event_ids.push(r_id);
-      }
       }
       function se_curser(){
          if(event_ids.length>0)
@@ -152,10 +165,10 @@
   売却
   <div id="buildings_sell">
   <ul>
-    <li onclick="sell_cursor()">カーソル</li>
-  <li　onclick="sell_grandma()">グランマ</li>
-  <li onclick="sell_farm()">ファーム</li>
-  <li onclick="sell_mine()">マイン</li>
+    <li onclick="cursor.sell()">カーソル</li>
+  <li　onclick="grandma.sell()">グランマ</li>
+  <li onclick="farm.sell()">ファーム</li>
+  <li onclick="mine.sell()">マイン</li>
   <li></li>
 </ul>
 </div>
