--- a/wether.html
+++ b/wether.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+    table.tr.td.th{border: 1px solid black};
   </head>
   <body>
+    <table>
+      <tr id="date">
+
+      </tr>
+      <tr id="weather">
+
+      </tr>
+    </table>
+    <script type="text/javascript">
     var xhr = new XMLHttpRequest();
 
   xhr.open('GET', "https://api.open-meteo.com/v1/forecast?latitude=35.6785&longitude=139.6823&daily=weathercode&timezone=Asia%2FTokyo");
@@ -13,9 +23,25 @@
 
   xhr.onreadystatechange = function() {
       if(xhr.readyState === 4 && xhr.status === 200) {
-          let weathercode=JSON.parse(xhr.responseText)["daily"]["weathercode"][1]
-           document.write(weathercode)
+          let weather_date=JSON.parse(xhr.responseText)["daily"]["weathercode"][1]
+          let date_array=weather_date.daily.time;
+          let weather_array=weather_date.daily.weathercode;
+
+          createweatherTable(array,weather_array);
       }
   }
+
+  createweatherTable(array,weather_array);
+
+  function createweatherTable(date_array,weather_array){
+  let t_date =document.getElementsById('date');
+  let t_date =document.getElementsById('weather');
+
+  date_array.forEach(function(date,i){
+    t_date.innerHTML=t_date.innerHTML+"<th>"+date+"</th>";
+    t_weather.innerHTML=t_weather.innerHTML+"<th>"+weather_array[i]+"</th>";
+  });
+}
+  </script>
   </body>
 </html>
