--- a/twitter.html
+++ b/twitter.html
@@ -22,6 +22,47 @@
                 }
                 .icon{width:70px;}
                 .icon img{width:50px;border-radius: 50%; }
+                .username{font-weight: bold;}
+                name{padding-left:5px;
+                font-weight: lighter;
+                color:gray;}
+                .date{padding-left:5px;
+                font-weight: lighter;
+                color:gray;}
+                .date::before {
+                content: "- ";}
+                .text{padding-top:3px;
+                padding-bottom:5px;font-family: 'ＭＳ Ｐゴシック','ＭＳＰゴシック','MSPゴシック','MS Pゴシック';
+                font-size: 16px;
+                line-height: 18px;
+                word-break: break-all;
+                }
+                icon_chat{
+    padding-left:35px;
+    background-image: url(../img/chat.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .icon_fav{
+    padding-left:35px;
+    background-image: url(../img/fav.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .icon_res{
+    padding-left:35px;
+    background-image: url(../img/res.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .icon_share{
+    padding-left:35px;
+    background-image: url(../img/share.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .action{display:flex;}
+.action span{width:25%;}
 
     </style>
   </head>
@@ -32,7 +73,20 @@
             <img src="monhan.jpg" alt="">
           </div>
           <div class="tweet_box">
-
+            <div class="username">
+              ユーザー名
+              <span class="name">@zarioka</span>
+              <span class="data">2022/7/5</span>
+            </div>
+            <div class="text">
+              ツイートの内容を表示する
+              ああああああああああああああああああああ
+            </div>
+            <div class="action">
+              <span class="icon_chat">0</span>
+              <span class="icon_fav">0</span>
+              <span class="icon_share">0</span>
+              <span class="icon_res">0</span>
           </div>
 
         </div>
