--- a/twitter.html
+++ b/twitter.html
@@ -69,18 +69,18 @@
   <body>
     <div class="container">
       <div id="timeline">
+        <div class="tweet">
           <div class="icon">
             <img src="monhan.jpg" alt="">
           </div>
           <div class="tweet_box">
             <div class="username">
-              ユーザー名
+              ${tweet.username}
               <span class="name">@zarioka</span>
               <span class="data">2022/7/5</span>
             </div>
             <div class="text">
-              ツイートの内容を表示する
-              ああああああああああああああああああああ
+              ${tweet.text}
             </div>
             <div class="action">
               <span class="icon_chat">0</span>
@@ -88,10 +88,21 @@
               <span class="icon_share">0</span>
               <span class="icon_res">0</span>
           </div>
-
         </div>
-      </div>
+        </div>
 
     </div>
+    <script type="text/javascript">
+
+    let timeline=document.getElementById('timeline');
+    let tweets=[{"text":"こんにちは","username":"zakioka"},
+                {"text":"こんばんわ","username":"zarioka"},
+                {"text":"おはよう","username":"zaki"}];
+    tweets.forEach((tweet, i) => {
+      let template=`<div class="tweet">
+      timeline.innerHTML=timeline.innerHTML+tempplate
+    });
+
+    </script>
   </body>
 </html>
