--- a/twitter.html
+++ b/twitter.html
@@ -1,108 +1,129 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <style media="screen">
-      .container{
-                display: flex;
-                justify-content: center;
-                flex-wrap: wrap;
-                }
-                #timeline{width:600px;
-                 border-width: 0px thin;
-                 border-style: solid;
-                 border-color: #CCC;
-                }
-                .tweet{display:flex;
-                 border-width: 0px 0px 1px 0px;
-                 border-style: solid;
-                 border-color: #CCC;
-                 padding:15px;
-                }
-                .icon{width:70px;}
-                .icon img{width:50px;border-radius: 50%; }
-                .username{font-weight: bold;}
-                name{padding-left:5px;
-                font-weight: lighter;
-                color:gray;}
-                .date{padding-left:5px;
-                font-weight: lighter;
-                color:gray;}
-                .date::before {
-                content: "- ";}
-                .text{padding-top:3px;
-                padding-bottom:5px;font-family: 'ＭＳ Ｐゴシック','ＭＳＰゴシック','MSPゴシック','MS Pゴシック';
-                font-size: 16px;
-                line-height: 18px;
-                word-break: break-all;
-                }
-                icon_chat{
-    padding-left:35px;
-    background-image: url(../img/chat.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <style media="screen">
+  .container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
-  .icon_fav{
-    padding-left:35px;
-    background-image: url(../img/fav.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
+  #timeline{width:600px;
+    border-width: 0px thin;
+    border-style: solid;
+    border-color: #CCC;
   }
-  .icon_res{
-    padding-left:35px;
-    background-image: url(../img/res.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
+  .tweet{display:flex;
+    border-width: 0px 0px 1px 0px;
+    border-style: solid;
+    border-color: #CCC;
+    padding:15px;
   }
-  .icon_share{
-    padding-left:35px;
-    background-image: url(../img/share.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  .action{display:flex;}
-.action span{width:25%;}
+  .icon{width:70px;}
+  .icon img{width:50px;border-radius: 50%; }
+  .username{font-weight: bold;}
+  name{padding-left:5px;
+    font-weight: lighter;
+    color:gray;}
+    .date{padding-left:5px;
+      font-weight: lighter;
+      color:gray;}
+      .date::before {
+        content: "- ";}
+        .text{padding-top:3px;
+          padding-bottom:5px;font-family: 'ＭＳ Ｐゴシック','ＭＳＰゴシック','MSPゴシック','MS Pゴシック';
+          font-size: 16px;
+          line-height: 18px;
+          word-break: break-all;
+        }
+        icon_chat{
+          padding-left:35px;
+          background-image: url(../img/chat.svg);
+          background-size: contain;
+          background-repeat: no-repeat;
+        }
+        .icon_fav{
+          padding-left:35px;
+          background-image: url(../img/fav.svg);
+          background-size: contain;
+          background-repeat: no-repeat;
+        }
+        .icon_res{
+          padding-left:35px;
+          background-image: url(../img/res.svg);
+          background-size: contain;
+          background-repeat: no-repeat;
+        }
+        .icon_share{
+          padding-left:35px;
+          background-image: url(../img/share.svg);
+          background-size: contain;
+          background-repeat: no-repeat;
+        }
+        .action{display:flex;}
+        .action span{width:25%;}
 
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div id="timeline">
-        <div class="tweet">
-          <div class="icon">
-            <img src="monhan.jpg" alt="">
+        </style>
+      </head>
+      <body>
+        <div class="container">
+          <div id="timeline">
+            <div class="tweet">
+              <input type="text" id="input_text" placeholder="ここに入力してね" name="" value="">
+              <button oneclick="form_tweet()" type="submit">送信</button>
+              </div>
+            </div>
           </div>
-          <div class="tweet_box">
-            <div class="username">
+          <script type="text/javascript">
+
+          let timeline=document.getElementById('timeline');
+          let send_data="?name=" + name + "&username=" + username + "&text" + text
+          let res_data=await(await fetch("./tweet.rb" + send_data)).text();
+            if(res_data !="OK"){
+              alert(res_data);
+            }
+          };
+          
+          viewTweet();
+
+          async function viewTweet(){
+            let tweets=await getjson();
+            appendTweet(tweets);
+          }
+
+          async  function getjson(){
+            let response = await(await fetch("http://192.168.0.90/timeline.json")).json()
+            return response
+          }
+
+          function appendTweet(tweets){
+            tweets.forEach((tweet, i) => {
+              let template=`  <div class="tweet">
+              <div class="icon">
+              <img src="monhan.jpg" alt="">
+              </div>
+              <div class="tweet_box">
+              <div class="username">
               ${tweet.username}
               <span class="name">@zarioka</span>
               <span class="data">2022/7/5</span>
-            </div>
-            <div class="text">
+              </div>
+              <div class="text">
               ${tweet.text}
-            </div>
-            <div class="action">
+              </div>
+              <div class="action">
               <span class="icon_chat">0</span>
               <span class="icon_fav">0</span>
               <span class="icon_share">0</span>
               <span class="icon_res">0</span>
-          </div>
-        </div>
-        </div>
+              </div>
+              </div>
+              </div>`
+              timeline.innerHTML=timeline.innerHTML+template
+            });
+          }
 
-    </div>
-    <script type="text/javascript">
-
-    let timeline=document.getElementById('timeline');
-    let tweets=[{"text":"こんにちは","username":"zakioka"},
-                {"text":"こんばんわ","username":"zarioka"},
-                {"text":"おはよう","username":"zaki"}];
-    tweets.forEach((tweet, i) => {
-      let template=`<div class="tweet">
-      timeline.innerHTML=timeline.innerHTML+tempplate
-    });
-
-    </script>
-  </body>
-</html>
+          </script>
+        </body>
+        </html>
