--- a/twitter.html
+++ b/twitter.html
@@ -70,22 +70,36 @@
         <div class="container">
           <div id="timeline">
             <div class="tweet">
-              <input type="text" id="input_text" placeholder="ここに入力してね" name="" value="">
-              <button oneclick="form_tweet()" type="submit">送信</button>
+              <input type="text" id="input_text" placeholder="ここに入力してね" name="" value=""/>
+              <button onclick="form_tweet()" type="submit">送信</button>
               </div>
             </div>
           </div>
+
           <script type="text/javascript">
 
           let timeline=document.getElementById('timeline');
-          let send_data="?name=" + name + "&username=" + username + "&text" + text
-          let res_data=await(await fetch("./tweet.rb" + send_data)).text();
+
+          function form_tweet(){
+            console.log("form")
+            let input_text=document.getElementById('input_text');
+            if(input_text.value !=""){
+              post_tweet(input_text.value,"name","zarioka");
+              input_text.value="";
+            }
+          }
+
+          async function post_tweet(text,name,username){
+          let send_data="?name=" + name + "&username=" + username + "&text=" + text;
+          let res_data=await(await fetch("http://192.168.0.90/tweet.rb" + send_data)).text();
             if(res_data !="OK"){
               alert(res_data);
             }
           };
-          
+
           viewTweet();
+
+
 
           async function viewTweet(){
             let tweets=await getjson();
